--- a/index.html
+++ b/index.html
@@ -12,63 +12,64 @@
       max-width: 900px;
       margin: 40px auto;
       padding: 0 20px;
-      background-color: #fafafa;
-      color: #333;
+      background-color: #f7f5fb;
+      color: #2e2a35;
     }
 
     img {
       display: block;
       margin: 20px auto;
-      border-radius: 10px;
+      border-radius: 50%;
+      box-shadow: 0 0 10px rgba(100, 80, 160, 0.3);
     }
 
     h1, h2, h3, h4, h5, h6 {
-      color: #2c3e50;
+      color: #4a347a;
     }
 
-    /* ——— Специальные стили из задания ——— */
+    /* Индивидуальные стили */
     .rackham-underline {
       font-size: 14px;
-      color: green;
+      color: #6b3fa0;
       font-family: Arial, sans-serif;
-      text-decoration: underline;
+      text-decoration: underline dotted;
     }
 
     .cicero-bold {
       font-size: 16px;
-      color: red;
+      color: #b4318d;
       font-family: Arial, sans-serif;
       font-weight: bold;
     }
 
     .rackham-italic {
       font-size: 14px;
-      color: green;
+      color: #6b3fa0;
       font-family: Arial, sans-serif;
       font-style: italic;
     }
 
-    /* Абзацы с отступом */
     .indented {
       white-space: pre;
     }
 
-    /* Отдельные блоки */
     .block {
       margin: 20px 0;
       padding: 15px;
-      border: 1px solid #ccc;
-      border-radius: 10px;
+      border: 1px solid #d3cce3;
+      border-radius: 12px;
       background-color: #fff;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08);
     }
 
     footer {
       text-align: center;
       margin-top: 40px;
+      color: #6b3fa0;
     }
 
     a {
-      color: #007acc;
+      color: #8c52ff;
       text-decoration: none;
     }
 
@@ -121,54 +122,54 @@
   <div class="block">
     <h3>Раскрывающийся список</h3>
     <details>
-      <summary>Моя учебная группа</summary>
+      <summary>Моя учебная группа (по алфавиту)</summary>
       <ul>
-        <li>Сипакова Анна</li>
-        <li>Римская Ольга</li>
+        <li>Завьялова Ксения</li>
         <li>Махова Бэлла</li>
+        <li>Нефедова Дарья</li>
         <li>Полянина Полина</li>
+        <li>Римская Ольга</li>
+        <li>Сипакова Анна</li>
         <li>Сухова Наталия</li>
         <li>Хитько Анастасия</li>
-        <li>Нефедова Дарья</li>
         <li>Шуклина Виктория</li>
-        <li>Завьялова Ксения</li>
       </ul>
     </details>
   </div>
 
   <div class="block">
-    <h3>Нумерованный список</h3>
+    <h3>Нумерованный список (по алфавиту)</h3>
     <ol>
-      <li>Сипакова Анна</li>
-      <li>Римская Ольга</li>
+      <li>Завьялова Ксения</li>
       <li>Махова Бэлла</li>
+      <li>Нефедова Дарья</li>
       <li>Полянина Полина</li>
+      <li>Римская Ольга</li>
+      <li>Сипакова Анна</li>
       <li>Сухова Наталия</li>
       <li>Хитько Анастасия</li>
-      <li>Нефедова Дарья</li>
       <li>Шуклина Виктория</li>
-      <li>Завьялова Ксения</li>
     </ol>
   </div>
 
   <div class="block">
-    <h3>Маркированный список</h3>
+    <h3>Маркированный список (по алфавиту)</h3>
     <ul>
-      <li>Сипакова Анна</li>
-      <li>Римская Ольга</li>
+      <li>Завьялова Ксения</li>
       <li>Махова Бэлла</li>
+      <li>Нефедова Дарья</li>
       <li>Полянина Полина</li>
+      <li>Римская Ольга</li>
+      <li>Сипакова Анна</li>
       <li>Сухова Наталия</li>
       <li>Хитько Анастасия</li>
-      <li>Нефедова Дарья</li>
       <li>Шуклина Виктория</li>
-      <li>Завьялова Ксения</li>
     </ul>
   </div>
 
   <!-- Ссылка на поисковую систему -->
   <footer>
-    <p>Перейти к поиску: <a href="https://www.yandex.ru" target="_blank">Яндекс</a></p>
+    <p>Перейти к поиску: <a href="https://www.google.ru" target="_blank">Google</a></p>
   </footer>
 </body>
 </html>
