--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
     img {
       display: block;
       margin: 20px auto;
-      border-radius: 50%;
-      box-shadow: 0 0 10px rgba(100, 80, 160, 0.3);
+      border-radius: 0;
+      box-shadow: none;
     }
 
     h1, h2, h3, h4, h5, h6 {
       color: #4a347a;
     }
 
-    /* Индивидуальные стили */
     .rackham-underline {
       font-size: 14px;
       color: #6b3fa0;
@@ -79,19 +78,15 @@
   </style>
 </head>
 <body>
-  <!-- Заголовок страницы -->
   <h1>Завьялова Ксения</h1>
   <p>Дизайнер костюма с опытом разработки уникальных образов для театральных спектаклей, кино и различных мероприятий.</p>
 
-  <!-- Фото -->
   <img src="photo.jpg" alt="Фото Завьяловой Ксении" width="300">
 
-  <!-- Образование -->
   <h2>Образование</h2>
-  <p>     <strong>Специализация:</strong> Дизайн костюмов, художественное училище или университет.</p>
-  <p>     Обучение по курсам и мастер-классам в области сценического костюма, истории моды и текстиля.</p>
+  <p><strong>Специализация:</strong> Дизайн костюмов, художественное училище или университет.</p>
+  <p>Обучение по курсам и мастер-классам в области сценического костюма, истории моды и текстиля.</p>
 
-  <!-- Профессиональный опыт -->
   <h3>Профессиональный опыт</h3>
   <ul>
     <li><strong>Создание костюмов:</strong> Разработка эскизов и технических чертежей для постановок и фильмов.</li>
@@ -99,7 +94,6 @@
     <li><strong>Коллаборации:</strong> Совместная работа с режиссёрами, художниками-постановщиками и актёрами для достижения гармоничного образа.</li>
   </ul>
 
-  <!-- Компетенции -->
   <h3 class="rackham-underline">Компетенции</h3>
   <ul>
     <li>Создание и проектирование костюмов</li>
@@ -109,16 +103,13 @@
     <li>Умение работать в команде и руководить проектами</li>
   </ul>
 
-  <!-- Личные качества -->
   <h3 class="cicero-bold">Личные качества</h3>
   <p class="indented">     Креативность, внимательность к деталям, способность адаптироваться к разным задачам, коммуникабельность и организованность.</p>
 
-  <!-- Контакты -->
   <h3 class="rackham-italic">Контакты</h3>
   <p class="indented">     Телефон: <a href="tel:+78005553535">8 (800) 555-35-35</a></p>
   <p class="indented">     Email: <a href="mailto:bebebe@mail.ru">bebebe@mail.ru</a></p>
 
-  <!-- Списки -->
   <div class="block">
     <h3>Раскрывающийся список</h3>
     <details>
@@ -167,7 +158,6 @@
     </ul>
   </div>
 
-  <!-- Ссылка на поисковую систему -->
   <footer>
     <p>Перейти к поиску: <a href="https://www.google.ru" target="_blank">Google</a></p>
   </footer>
